alignment fix

--- a/src/components/features/features.css
+++ b/src/components/features/features.css
@@ -79,6 +79,7 @@
     border-radius: 0.5rem;
     background-color: #ffffff;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    text-align: center;
 }
 
 .update-popup-container:hover .update-popup {
@@ -87,7 +88,7 @@
 
 .update-popup button {
     display: inline-block;
-    margin: 0.2rem;
+    margin: 0.2rem 0 0.2rem 0;
     width: 100%;
     text-align: right;
 }
